fix caroussel caption size on mobile

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,13 @@ body, row{
 
 .carousel-caption{
     text-shadow: black 0.3em 0.3em 0.4em;
+    text-align: center;
+}
+@media (max-width: 1000px) { 
+    .carousel-caption{
+        font-size: 80%;
+    }
+
 }
 
 @media (min-width: 1000px) { 
